Refactor class hierarchy
- Client + ClientAuth hierarchy pruning
- One impl per API group, [*]AuthImpl + [*]Impl -> [*]Handler